template created for fielding table as .html
Created new fielding folder inside of the template folder, created fielding.html file, modified related files

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,6 +12,7 @@
                 <ul>
                     <li><a href="{{ url_for('home_page') }}">Home</a></li>
                     <li><a href="{{ url_for('teams_page') }}">Teams</a></li>
+                    <li><a href="{{ url_for('fielding_page') }}">Fielding</a></li>
                 </ul>
             </nav>
         </header>
