--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -13,7 +13,7 @@
                 <li><a href="{{ url_for('home_page') }}">Home</a></li>
                 <li><a href="{{ url_for('teams_page') }}">Teams</a></li>
                 <li><a href="{{ url_for('fielding_page') }}">Fielding</a></li>
-                <li><a href="{{ url_for('pitching_page') }}">Pitching</a></li>
+                <li><a href="{{ url_for('pitching_options') }}">Pitching</a></li>
                 <li><a href="{{ url_for('about_page') }}">About Us</a></li>
             </ul>
         </nav>
