Master table added

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -35,5 +35,11 @@ Welcome
         <p>Analyze pitching records and discover the greatest pitchers in history.</p>
         <a href="{{ url_for('pitching_table') }}" class="btn">View Pitching Stats</a>
     </div>
+     <div class="feature">
+        <!-- <img src="{{ url_for('static', filename='images/master.jpg') }}" alt="Master" class="feature-img"> -->
+        <h2>Master</h2>
+        <p>Explore detailed player information from the Master dataset.</p>
+        <a href="{{ url_for('master_options') }}" class="btn">View Master Data</a>
+    </div>
 </section>
 {% endblock %}
