--- a/app/templates/teams.html
+++ b/app/templates/teams.html
@@ -12,35 +12,12 @@ Teams{% endblock %}
     <a href="{{ url_for('add_team_page') }}" class="btn btn-success">Add New Team</a>
 </div>
 
-<!-- Sorting Option -->
-<div class="form-group2">
-    <label>Sort By:</label>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="sort_by" id="sort_by_wins" value="wins" {% if request.args.get('sort_by') == 'wins' %}checked{% endif %}>
-        <label class="form-check-label" for="sort_by_wins">
-            Wins
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="sort_by" id="sort_by_year" value="year" {% if request.args.get('sort_by') == 'year' %}checked{% endif %}>
-        <label class="form-check-label" for="sort_by_year">
-            Year
-        </label>
-    </div>
-    <div class="form-check">
-        <input class="form-check-input" type="radio" name="sort_by" id="sort_by_team" value="team" {% if request.args.get('sort_by') == 'team' %}checked{% endif %}>
-        <label class="form-check-label" for="sort_by_team">
-            Team Name
-        </label>
-    </div>
-</div>
-
 
 <!-- Filter Form -->
 <form id="filter-form" method="get" action="/teams" class="filter-form">
     <div class="form-row">
         <!-- League Filter -->
-        <div class="form-group col-md-4">
+        <div class="form-group">
             <label for="league">League</label>
             <select name="league" id="league" class="form-control">
                 <option value="">Select League</option>
@@ -53,7 +30,7 @@ Teams{% endblock %}
         </div>
 
         <!-- Year Filter -->
-        <div class="form-group col-md-4">
+        <div class="form-group">
             <label for="year">Year</label>
             <input
                 type="text"
@@ -64,9 +41,8 @@ Teams{% endblock %}
                 placeholder="Enter Year"
             />
         </div>
-
         <!-- Team Name Filter -->
-        <div class="form-group col-md-4">
+        <div class="form-group">
             <label for="team_name">Team Name</label>
             <input
                 type="text"
@@ -78,12 +54,32 @@ Teams{% endblock %}
             />
         </div>
 
-        <!-- Submit Button -->
-        <div class="form-group col-md-12">
+        <!-- Sort By Filter -->
+        <div class="form-group">
+            <label for="sort_by">Sort By</label>
+            <select name="sort_by" id="sort_by" class="form-control">
+                <option value="">Select</option>
+                <option value="wins_asc" {% if request.args.get('sort_by') == 'wins_asc' %}selected{% endif %}>Wins (Ascending)</option>
+                <option value="wins_desc" {% if request.args.get('sort_by') == 'wins_desc' %}selected{% endif %}>Wins (Descending)</option>
+                <option value="year_asc" {% if request.args.get('sort_by') == 'year_asc' %}selected{% endif %}>Year (Ascending)</option>
+                <option value="year_desc" {% if request.args.get('sort_by') == 'year_desc' %}selected{% endif %}>Year (Descending)</option>
+                <option value="team_name_asc" {% if request.args.get('sort_by') == 'team_name_asc' %}selected{% endif %}>Team Name (A-Z)</option>
+                <option value="team_name_desc" {% if request.args.get('sort_by') == 'team_name_desc' %}selected{% endif %}>Team Name (Z-A)</option>
+            </select>
+        </div>
+
+        <!-- Submit and Reset Buttons -->
+        <div class="form-group btn-block">
             <button type="submit" class="btn btn-primary btn-block">Filter</button>
+            <button type="reset" class="btn btn-secondary btn-block">Reset</button>
         </div>
     </div>
 </form>
+
+<!-- Loading Spinner -->
+<div id="loading-spinner" style="display: none; text-align: center;">
+    <span>Loading...</span>
+</div>
 
 
 
